src/rust/items/snapshots/syn_state_machine__rust__items__structs__tests__concat_idents! (parse it_matches_tuple_struct).snap
---
source: src/rust/items/structs.rs
expression: "crate::parse::<Struct<Infallible, Ident>>(q.clone())"
---
Ok(
    TupleStruct(
        TupleStruct {
            id: Ident(
                Hello,
            ),
            generic_parameters: None,
            fields: Paren(
                Interlace {
                    values: [
                        TupleField {
                            attrs: Rep(
                                [],
                            ),
                            vis: None,
                            ty: Ident(
                                Hello,
                            ),
                        },
                        TupleField {
                            attrs: Rep(
                                [],
                            ),
                            vis: Some(
                                Pub,
                            ),
                            ty: Ident(
                                World,
                            ),
                        },
                    ],
                },
                Span,
            ),
            where_clause: None,
        },
    ),
)
