src/rust/items/snapshots/syn_state_machine__rust__items__structs__tests__concat_idents! (parse it_matches_unit).snap
---
source: src/rust/items/structs.rs
expression: "crate::parse::<Struct<P<Infallible>, Ident>>(q.clone())"
---
Ok(
    StructStruct(
        StructStruct {
            id: Ident(
                Hello,
            ),
            generic_parameters: None,
            where_clause: None,
            fields: None,
        },
    ),
)
